[package]
name = "particl-blockchain-parser"
version = "1.0.0"
edition = "2021"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
bitcoincore-zmq = { version = "1.3.1", features = ["async"] }
clap = { version = "4.4.7", features = ["derive", "cargo"] }
colored = { version = "2.0.4", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
futures-util = "0.3.29"
humantime = "2.1.0"
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
surrealdb = { version = "2.0.4", features = ["protocol-ws"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
ureq = { version = "2.9.1", default-features = false, features = ["json"] }
